un poco de todo, y favoritos

--- a/src/screens/Screens.css
+++ b/src/screens/Screens.css
@@ -17,7 +17,7 @@ h2{
 h3 {
   margin-top: 0;
   margin-left: 3vw;
-  color: aliceblue;
+  color: rgb(0, 2, 3);
   font-family: 'Outfit';
   font-size: 2vw;
 }
