--- a/src/screens/Screens.css
+++ b/src/screens/Screens.css
@@ -140,3 +140,9 @@ u{
 .detail-favorites-link:hover {
   background-color: #0056b3;
 }
+.ResultadoHome{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap:16px
+}
