--- a/src/screens/Screens.css
+++ b/src/screens/Screens.css
@@ -44,7 +44,6 @@ h3 {
 u{
   color: rgb(187, 141, 233);
 }
-/* POSTER */
 .containerPoster{
   display: flex;
   flex-wrap: wrap;
@@ -62,7 +61,6 @@ u{
       box-shadow: 0 5px 5px 0px rgba(0, 0, 0, .2);
   }
 }
-/* Estilos para el contenedor principal */
 .detail-main {
   margin: 10px auto;
   padding: 10px;
@@ -73,7 +71,6 @@ u{
   max-width: 300px;
 }
 
-/* Estilos para el póster de la película */
 .detail-poster {
   width: 100%;
   height: auto;
@@ -81,49 +78,43 @@ u{
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilos para el título de la película */
 .detail-title {
   font-size: 14px;
   margin-top: 10px;
   color: #333;
 }
 
-/* Estilos para la calificación de la película */
 .detail-rating {
   margin-top: 5px;
   font-size: 12px;
   color: #007bff;
 }
 
-/* Estilos para la fecha de estreno */
 .detail-release-date {
   margin-top: 3px;
   font-size: 12px;
   color: #666;
 }
 
-/* Estilos para la duración de la película */
 .detail-runtime {
   margin-top: 3px;
   font-size: 12px;
   color: #666;
 }
 
-/* Estilos para la sinopsis de la película */
 .detail-overview {
   margin-top: 10px;
   font-size: 10px;
   color: #555;
 }
 
-/* Estilos para el género de la película */
 .detail-genre {
   margin-top: 10px;
   font-size: 10px;
   color: #666;
 }
 
-/* Estilos para el enlace de añadir a favoritos */
+
 .detail-favorites-link {
   display: inline-block;
   margin-top: 10px;
@@ -136,7 +127,7 @@ u{
   transition: background-color 0.3s;
 }
 
-/* Estilos para el enlace de añadir a favoritos al pasar el ratón */
+
 .detail-favorites-link:hover {
   background-color: #0056b3;
 }
@@ -145,4 +136,35 @@ u{
   flex-wrap: wrap;
   justify-content: space-around;
   gap:16px
+}
+
+/*  */
+.buscador {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.buscador section {
+  background-color: #f8f8f8;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px; 
+}
+
+.buscador section img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.buscador section h2 {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.buscador section p {
+  margin-bottom: 10px;
 }
